# fetz_as

./: .gitignore  .gitmodules  README.md
config/: bot135smallWheel_teleop.config.yaml  comments.md  test.yaml
micro_ros_esp32/diff_drive_bot_esp32/: diff_drive_bot_esp32.ino
micro_ros_esp32/diff_drive_bot_esp32/pid_tuning_helper/: pid_tuning_helper.ino
micro_ros_esp32/encoder_test/: encoder_test.ino.ino
micro_ros_esp32/pid_controlled_motors/: pid_controlled_motors.ino
micro_ros_esp32/pid_controlled_motors2/: pid_controlled_motors2.ino
micro_ros_esp32/pid_tuning_helper/: pid_tuning_helper.ino
src/combat_strategizer/: package.xml  setup.cfg  setup.py
src/combat_strategizer/combat_strategizer/: simple_attack.py  weapon_control.py
src/combat_strategizer/launch/: combat.launch.py  letsgo.launch.py  letsgo_sim.launch.py
src/combat_strategy/: package.xml  setup.cfg  setup.py
src/combat_strategy/combat_strategy/: go_to_goal.py
src/detection/: main.py  main_lean.py  package.xml  requirements.txt  setup.py  setup.sh
src/detection/calibration/: calibrateCamera.py  calibration.py  camera_calibration.json  doubleFisheye.py
src/detection/calibration/testOpenCvFisheyeCpp/: CMakeLists.txt  calibrateFisheye.cpp
src/detection/data/: USBGS720P02-L170_calibration.json  USBGS720P02-L170_calibration.npz  USBGS720P02-L170_calibration_non_fisheye_model.json  transformation_data.json  (+5 more)
src/first_package/: package.xml  setup.py
src/robot_navigation/: package.xml  setup.py
src/simple_diff_drive_sim/: package.xml  setup.py
src/utils/: package.xml  setup.py
(+61 files in other folders)
